@@ -9,3 +9,5 @@ DB:
   - The intelligence service in installed on every shard
   - New and improved internal access control on items
   - Performace improvements
+  - Alerting subsystem improved to handle more alerts
+  - Ability to create manual entities in the intelligence module
